--- a/web_app/src/collectapp/res/values/strings.xml
+++ b/web_app/src/collectapp/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">门店管理系统</string>
+    <string name="app_name">门店管理</string>
     <string name="take_photo">Take Photo</string>
     <string name="use_gallery_photo">Use Gallery Photo</string>
 </resources>
